feat: add custom page support
